--- a/transform/dbt_project.yml
+++ b/transform/dbt_project.yml
@@ -7,7 +7,7 @@ version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: 'my-dbt-profile'
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
@@ -33,6 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   my_new_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    bronze:
+      materialized: table
+      schema: bronze
+    silver:
+      materialized: table
+      schema: silver
